# HIDTester

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.rc
.github/workflows/: linux-build.yml  macos-build.yml  windows-build.yml
src/: JoystickHandler.h  main.cpp  version.h.in
